--- a/practice-for-ch-js-browser-ttt-main/ttt.css
+++ b/practice-for-ch-js-browser-ttt-main/ttt.css
@@ -1,1 +1,26 @@
 /* Your code here */
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  width: 300px;
+  height: 300px;
+  padding: 0;
+  border: 5px solid black;
+  list-style: none;
+}
+
+/* li::after {
+  content: "x";
+} */
+
+li {
+  display: flex;
+  width: 90px;
+  height: 90px;
+  border: 5px solid blue;
+  background-color: lightgray;
+}
+li:hover {
+  background-color: yellow;
+}
